fixed overflow

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 html {
   scroll-behavior: smooth;
-
+  overflow: hidden;
 }
 body {
   font-family: "Rubik Mono One", sans-serif;
@@ -19,17 +19,14 @@ body {
   height: 100vh;
 }
 
-
 #main-model-1 {
   background-color: red;
 }
 #main-model-2 {
   background-color: green;
-  height: 100vh;
 }
 #main-model-3 {
   background-color: yellow;
-  height: 100vh;
 }
 
 h1 {
@@ -39,45 +36,43 @@ h1 {
 }
 
 nav {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 400px;
-    height: 400px;
-    margin:  50px 0;
-    z-index: 1;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 400px;
+  height: 400px;
+  margin: 50px 0;
+  z-index: 1;
 }
 
 nav ul {
-    display: flex;
+  display: flex;
 }
 
 nav li {
-    list-style-type: none;
-    margin: 20px;
-    transition: all ease .4s;
+  list-style-type: none;
+  margin: 20px;
+  transition: all ease 0.4s;
 }
 
 nav li:hover {
-    transform: scale(1.10);
+  transform: scale(1.1);
 }
 
 nav ul li a {
-    text-decoration: none;
-    color: #000;
-    font-size: 2rem;
-    display: inline-block;
-    background-color: #fff;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 80px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5) ;
-    border: 3px solid #333;
+  text-decoration: none;
+  color: #000;
+  font-size: 2rem;
+  display: inline-block;
+  background-color: #fff;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 80px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+  border: 3px solid #333;
 }
-
-/* Utils */
 
 .product-image {
   width: 800px;
@@ -88,18 +83,10 @@ nav ul li a {
   transform: translate(-50%, -50%);
 }
 
-.debug {
-  border: 1px solid white;
-}
-
 .secondary-color {
   color: green;
 }
 
-.overflow {
-    overflow: hidden;
-}
-
 .shadow {
-    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.8);
+  text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.8);
 }
